Fixed overflow issue

--- a/style.css
+++ b/style.css
@@ -6,7 +6,6 @@
         margin: 0;
         padding: 0;
         font-family: 'Bai Jamjuree', sans-serif;
-        overflow-x: hidden !important;
     }
     
     .container{
@@ -348,11 +347,12 @@
         margin: 0;
         padding: 0;
         font-family: 'Bai Jamjuree', sans-serif;
-        overflow-x: hidden !important;
+       
     }
     
     .container{
         width: 100%;
+        overflow-x: hidden;
     }
     
     header{
